--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -24,9 +28,9 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.github.hotchemi:permissionsdispatcher:2.2.1'
-
     implementation 'org.litepal.android:core:1.6.1'
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'in.srain.cube:ptr-load-more:1.0.6'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'org.jsoup:jsoup:1.10.2'
@@ -39,4 +43,5 @@ dependencies {
     implementation files('libs/pinyin4j-2.5.0.jar')
     implementation 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
+
 }
